# nps-sro-ml

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
converter/: CMakeLists.txt  format.sh  image.def
converter/include/: Graph.hh  NPS.hh  Utilities.hh  VTP.hh  fADC250.hh
converter/include/argparse/: argparse.hpp
converter/sources/: Graph.cpp  NPS.cpp  Utilities.cpp  VTP.cpp  fADC250.cpp
converter/standalone/: CMakeLists.txt
converter/standalone/sources/: converter.cpp  reco_vtp.cpp
database/geo/: channel_map.csv
database/jlog/: get_run_config.py  request_jlog.py
docs/: data.md  index.md  instruction-converter.md  manage-website.md  package-lock.json  package.json  resources.md  vtp-data.md
docs/.vitepress/: config.mts
docs/.vitepress/theme/: Layout.vue  index.ts
docs/public/: 2025-10-24-figures.pptx
docs/tutorials/: cpp-edm4eic.md  ifarm.md  py-csv.md  py-edm4eic-uproot.md
pytorch_src/base/: dataloader.py  model.py  scaler.py  trainer.py
pytorch_src/datasets/: nps.py  synthetic.py
pytorch_src/layers/: attention.py  embed.py  encoders.py  scalers.py
pytorch_src/models/: loss.py  oc_attn.py  oc_inference.py  oc_loss.py
pytorch_src/tests/base/: test_dataloader.py  test_model.py
pytorch_src/tests/models/: test_oc_inference.py  test_oc_loss.py
pytorch_src/tests/utils/: test_utils.py
pytorch_src/tests/utils/graph/: test_edge_to_adj_matrix.py  test_find_connected_components_undirected_dfs.py  test_find_local_edge_index.py  test_pack_to_graph_batches.py  test_reorder_from_graph_batches.py
pytorch_src/training/: oc_trainer.py
pytorch_src/utils/: config.py  graph.py  masks.py  tensorboard.py  utils.py
