[build-system]
requires = ["setuptools>=65.5.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nps-sro-ml"
version = "0.0.1"
description = "AI/ML application on Streaming Readout Data in NPS experiment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26.2",
    "pandas>=2.1.3",
    "scipy>=1.12.0",
    "black",
    "ruff"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
where = ["pytorch_src"]

[tool.black]
line-length = 88
skip-string-normalization = true
skip-magic-trailing-comma = false

[tool.ruff]
fix = true

[tool.ruff.lint]
select = ["D"]
ignore = ["D203", "D212", "D200", "D100", "D104"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"